# sdl

./: Bird.cpp  Bird.h  Bullet.cpp  Bullet.h  CMakeLists.txt  Main.cpp  Message.cpp  Message.h  Pipe.cpp  README.md  game.cpp  game.h  gameSettings.h  main.cpp  resource.h  sdl.aps  sdl.rc  sdl.vcxproj  sdl.vcxproj.filters
classes/: Bird.cpp  Bullet.cpp  Enemy.cpp  Game.cpp  Message.cpp  Pipe.cpp
headers/: Bird.h  Bullet.h  Enemy.h  Game.h  GameSettings.h  Message.h
